[package]
name = "mpkr21"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.2", features = ["csr"] }
leptos-use = "0.16.1"
leptos_router = "0.8.2"
#leptos = { version = "0.7.8", features = ["csr"] }
#leptos-use = "0.15.7"
#leptos_router = "0.7.8"
